working pos, transaction db changes, added vat to pos and transaction, changed text-align for tables, fixed timezone to asia/manila, fixed recent transaction darkmode text oclor remove add transc tion, edit and delete.

--- a/kapitan-stone/public/assets/css/style.css
+++ b/kapitan-stone/public/assets/css/style.css
@@ -344,6 +344,10 @@ body.dark .sidebar .side-menu li:hover a {
     margin-bottom: 10px;
     color: var(--dark);
 }
+.orders tr{
+    color: var(--dark);
+}
+
 
 .content main .header .left .breadcrumb{
     display: flex;
